force-app/main/default/objects/Tenant__c/fields/AreaCode__c.field-meta.xml
<CustomField>
    <fullName>AreaCode__c</fullName>
    <label>AreaCode</label>
    <length>12</length>
    <type>Text</type>
</CustomField>