force-app/main/default/objects/Tenant__c/fields/NumOfOrder__c.field-meta.xml
<CustomField>
    <fullName>NumOfOrder__c</fullName>
    <label>NumOfOrder</label>
    <summaryForeignKey>Tenant_Order__c.Tenant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>