force-app/main/default/objects/Tenant__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>11</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>