force-app/main/default/objects/Tenant__c/validationRules/AreaCodeRequirement.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaCodeRequirement</fullName>
    <active>true</active>
    <description>Area Code can not be empty and contains only numbers</description>
    <errorConditionFormula>ISBLANK( AreaCode__c ) ||  NOT(ISNUMBER( AreaCode__c ))||  NOT(  LEN( AreaCode__c )=5 )</errorConditionFormula>
    <errorDisplayField>AreaCode__c</errorDisplayField>
    <errorMessage>Area Code can not be empty and contains only numbers</errorMessage>
</ValidationRule>