force-app/main/default/objects/Tenant__c/validationRules/CustomDiscountPercent.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomDiscountPercent</fullName>
    <active>true</active>
    <description>Validates that a custom discount percent field is between 0 and 40%.</description>
    <errorConditionFormula>Discount_Percentage__c  &lt; 0 ||
Discount_Percentage__c  &gt;0.4</errorConditionFormula>
    <errorDisplayField>Discount_Percentage__c</errorDisplayField>
    <errorMessage>Validates that a custom discount percent field is between 0 and 40%.</errorMessage>
</ValidationRule>