force-app/main/default/objects/Tenant__c/validationRules/LastNameRequirements.validationRule-meta.xml
<ValidationRule>
    <fullName>LastNameRequirements</fullName>
    <active>true</active>
    <description>Last name can not be empty, or contains &apos;test&apos; or &apos;TEST&apos;</description>
    <errorConditionFormula>ISBLANK( Last_Name__c ) ||  CONTAINS( Last_Name__c , &apos;test&apos;)||  CONTAINS( Last_Name__c , &apos;TEST&apos;)</errorConditionFormula>
    <errorDisplayField>Last_Name__c</errorDisplayField>
    <errorMessage>Last name can not be empty, or contains &apos;test&apos; or &apos;TEST&apos;</errorMessage>
</ValidationRule>