force-app/main/default/objects/Tenant__c/validationRules/OnlyNumbers.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlyNumbers</fullName>
    <active>true</active>
    <description>Phone number can contains only numbers</description>
    <errorConditionFormula>NOT(ISNUMBER( Phone_number__c ) )</errorConditionFormula>
    <errorDisplayField>Phone_number__c</errorDisplayField>
    <errorMessage>Phone number can contains only numbers</errorMessage>
</ValidationRule>