force-app/main/default/objects/Tenant__c/validationRules/SSN_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( LEN( SSN__c )=11 )&amp;&amp; MID( SSN__c , 4, 1) =&apos;-&apos; &amp;&amp;  MID( SSN__c , 7, 1) =&apos;-&apos;</errorConditionFormula>
    <errorMessage>Please enter a valid SSN in the format of 123-45-6789.</errorMessage>
</ValidationRule>