force-app/main/default/objects/Tenant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Last_Name__c</columns>
    <columns>NumOfOrder__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>